--- a/assets/styles/partials/_variables.scss
+++ b/assets/styles/partials/_variables.scss
@@ -87,6 +87,12 @@ $line-height-large:         1.3333333 !default; // extra decimals for Win 8.1 Ch
 $line-height-small:         1.5 !default;
 
 
+//== Sections
+//
+//
+$section-gutter:            80px;
+
+
 //== Grid
 //
 //
